longhorn/longhorn-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.k8s.zakhaven.uk`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: authentik
          namespace: ingress
